<resources>
    <string name="app_name">My Application</string>
    <string name="email_address_name">Email/Username</string>
    <string name="welcome_to_mcjerry">Welcome to McJerry</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="file">File</string>
    <string name="tutorial">Tutorial</string>
    <string name="more">More</string>
    <string name="mcjerry">McJerry</string>
    <string name="today">Today</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="logo">logo</string>
    <string name="doctor">Doctor</string>
    <string name="what_is_your_role">What is Your Role?</string>
    <string name="parent">Parent</string>
    <string name="children">Children</string>
    <string name="log_out">Log out</string>
    <string name="how_fast_is_your_air_blow_today">HOW FAST IS YOUR AIR BLOW TODAY?</string>
    <string name="enter_peak_flow">Enter peak flow</string>
    <string name="submit">SUBMIT</string>
    <string name="record_new_peak_flow">Record new peak flow</string>
    <string name="select_all_that_applies">Select all that applies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="provider">Provider</string>
    <string name="next">Next</string>
    <string name="today_status">Today\'s Status</string>
    <string name="last_rescue_time">Last Rescue Time</string>
    <string name="weekly_rescue_time">Weekly Rescue Time</string>
    <string name="daily_checkin">Daily Check-in</string>
    <string name="birthday">Birthday</string>
    <string name="medicine_details">Medicine Details</string>
    <string name="default_start_date">Start Date: (Tap to select)</string>
    <string name="worse">Worse</string>
    <string name="same">Same</string>
    <string name="better">Better</string>
    <string name="profile_picture_button">pfp_button</string>
    <string name="reminder_button">reminder button</string>
    <string name="children_management">Children Management</string>
    <string name="legalName">Legal Name</string>
    <string name="legal_name">Legal Name</string>
    <string name="account_username">Account Username</string>
    <string name="child_userid">Child UserID</string>
</resources>