<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/identity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/testbg3"
    tools:context=".auth.LoginPage">

    <ImageView
        android:id="@+id/backgroundImageIdentity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/testbg3"
        android:scaleType="centerCrop"
        android:contentDescription="@null"
        android:importantForAccessibility="no"/>

    <LinearLayout
        android:id="@+id/loginContainerIdentity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/blur_bg"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/what_is_your_role"
                android:textColor="#000000"
                android:fontFamily="@font/quicksand"
                android:textStyle="bold"
                android:textSize="26sp">
            </TextView>

            <Button
                android:id="@+id/parentButton"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/parent"
                android:textSize="26sp"
                android:textColor="@color/white"
                android:backgroundTint="#064200"
                android:fontFamily="@font/quicksand"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/childrenButton"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/children"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="#064200"
                android:fontFamily="@font/quicksand"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/doctorButton"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/doctor"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:backgroundTint="#064200"
                android:fontFamily="@font/quicksand"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>